Add initial support for newer JDK version (>=16)