@@ -6,9 +6,21 @@ plugins {
 group 'net.dangmai'
 version '1.0-SNAPSHOT'
 
+applicationDefaultJvmArgs = [
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.text=ALL-UNNAMED"
+]
 task httpStartScripts(type: CreateStartScripts) {
     mainClassName = 'net.dangmai.serializer.server.HttpServer'
     applicationName = 'apex-ast-serializer-http'
+    defaultJvmOpts = [
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.text=ALL-UNNAMED"
+    ]
     classpath = startScripts.classpath
     outputDir = startScripts.outputDir
 }
@@ -20,7 +32,8 @@ applicationDistribution.into("bin") {
 
 mainClassName = 'net.dangmai.serializer.Apex'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.11
+targetCompatibility = 1.11
 
 repositories {
     flatDir {
@@ -44,9 +57,12 @@ tasks.withType(AbstractArchiveTask) {
     reproducibleFileOrder = true
 }
 
+distTar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
 distZip {
-    duplicatesStrategy = 'exclude'
-    archiveName = "${project.name}.zip"
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    archiveFileName = "${project.name}.zip"
 }
 ext {
     slf4jVersion = '1.7.30'
@@ -78,7 +94,7 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1'
-    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1'
 
     // https://mvnrepository.com/artifact/org.json/json
     testImplementation group: 'org.json', name: 'json', version: '20201115'
